# peacemakr-core-crypto

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: build_and_test.yml  upload_release.yml
cmake/: AddClangAnalyzer.cmake  AddClangFormat.cmake  AddGlog.cmake  AddPybind11.cmake  BuildOpenSSL.cmake  build-openssl.sh.in  iOS.cmake  ios.toolchain.cmake  peacemakr-core-crypto-config-version.cmake.in  peacemakr-core-crypto-config.cmake.in
docker/: Dockerfile  docs.Dockerfile  go-dependencies.Dockerfile  go.Dockerfile  java.Dockerfile  python.Dockerfile  swift.Dockerfile  test.Dockerfile  wasm.Dockerfile
src/core/: CMakeLists.txt  get-modes.sh
src/core/cpp/: CMakeLists.txt  crypto.cpp
src/core/include/: CryptoAllocator.hpp  CryptoBuffer.hpp  CryptoConfig.hpp  CryptoContext.h  CryptoContext.hpp  CryptoMemory.h  CryptoRandomBuffer.hpp  EncryptedBlob.h  crypto.h  random.h
src/core/include/peacemakr/: crypto.h  crypto.hpp  memory.h  random.h
src/core/src/: Buffer.c  Buffer.h  CipherHelper.h  CiphertextBlob.c  CiphertextBlob.h  CryptoBuffer.cpp  CryptoConfig.cpp  CryptoContext.c  CryptoContext.cpp  CryptoMemory.c  CryptoRandomBuffer.cpp  EVPHelper.h  Encrypt.c  EncryptedBlob.c  Endian.c  Endian.h  Hash.c  Key.c  Key.h  Logging.c  Logging.h  Serialize.c  Sign.c  b64.c  b64.h  init.c
src/core/test/: CMakeLists.txt  big_message.c  dh_keygen.c  encrypt_asymmetric.c  encrypt_asymmetric_from_pem.c  encrypt_asymmetric_gen_pem.c  encrypt_dh_pem.c  encrypt_symmetric.c  fuzz.cpp  garbage.c  get_key_from_cert.c  regressions.c  serialize.c  serialize_new_field.c  sign.c  test.cpp  test_helper.h
src/core/test/resources/: child.pem  child_cert.pem  child_csr.pem  test_keypair.pem  test_publickey.pem
src/core/test/resources/ca/: ca.crt  ca.key
src/core/test/utils/: b64.c  b64.h  helper.h
src/ffi/: CMakeLists.txt
src/ffi/android/: .gitignore  build.gradle
src/ffi/android/corecrypto/jni/: CryptoContext.java  Key.java
src/ffi/android/gradle/wrapper/: gradle-wrapper.properties
src/ffi/android/lib/: build.gradle
src/ffi/android/lib/corecrypto/java/: Key.java
src/ffi/android/openssl/: build-openssl.sh
src/ffi/android/src/androidTest/java/io/peacemakr/corecrypto/test/: KeyTest.java
src/ffi/android/src/main/java/io/peacemakr/corecrypto/: AsymmetricCipher.java  CryptoConfig.java  CryptoContext.java  EncryptionMode.java  Key.java  MessageDigestAlgorithm.java  Plaintext.java  RandomDevice.java  SymmetricCipher.java
src/ffi/android/src/main/native/: CMakeLists.txt  common-jni.h  context-jni.c  crypto-jni.c  key-jni.c  plaintext-jni.c  rng-jni.c
src/ffi/cpp/: CMakeLists.txt  crypto.cpp
src/ffi/cpp/include/peacemakr/: crypto.hpp
src/ffi/cpp/test/: CMakeLists.txt  fuzz.cpp  test.cpp  test_helper.h
src/ffi/go/: .gitignore  CMakeLists.txt  crypto.go.in
src/ffi/go/src/peacemakr/crypto/: crypto.go  crypto_test.go  go.mod
src/ffi/go/src/peacemakr_core_crypto/: crypto.go  crypto_test.go
src/ffi/java/: .gitignore  build-jni.sh  build.gradle  settings.gradle
src/ffi/java/android/: build.gradle
src/ffi/java/android/src/main/: AndroidManifest.xml
src/ffi/java/android/src/main/java/io/peacemakr/corecrypto/: .gitignore  Crypto.java
src/ffi/java/corecrypto/jni/: CryptoConfig.java  Key.java  Plaintext.java  RandomDevice.java
src/ffi/java/gradle/wrapper/: gradle-wrapper.properties
src/ffi/java/java/: build.gradle
src/ffi/java/java/src/main/c/: CMakeLists.txt  common-jni.h  crypto-jni.c  key-jni.c
src/ffi/java/java/src/main/java/cz/adamh/utils/: NativeUtils.java
src/ffi/java/java/src/main/java/io/peacemakr/corecrypto/: AsymmetricCipher.java  AsymmetricKey.java  SymmetricCipher.java
src/ffi/java/java/src/test/java/io/peacemakr/corecrypto/: AsymmetricKeyTest.java
src/ffi/java/openssl/: build-openssl.sh
src/ffi/java/src/androidTest/java/io/peacemakr/corecrypto/test/: KeyTest.java
src/ffi/java/src/main/: AndroidManifest.xml
src/ffi/java/src/main/c/: CMakeLists.txt  common-jni.c  common-jni.h  context-jni.c  crypto-jni.c  io_peacemakr_corecrypto_Crypto.c  key-jni.c  plaintext-jni.c
src/ffi/java/src/main/java/io/peacemakr/corecrypto/: AsymmetricCipher.java  AsymmetricKey.java  Crypto.java  Key.java  MessageDigest.java  RandomDevice.java
src/ffi/java/src/main/native/: rng-jni.c
src/ffi/java/src/test/java/io/peacemakr/corecrypto/: AsymmetricKeyTest.java
src/ffi/python/: CMakeLists.txt  test.py
src/ffi/python/src/: crypto.cpp
src/ffi/swift/: .gitignore  build-core-crypto.sh.in  module.map.in  run_tests.sh.in
src/ffi/swift/CoreCrypto/: corecrypto.modulemap  libpeacemakr-core-crypto.dylib
src/ffi/swift/CoreCrypto/CoreCrypto/: CoreCrypto.h  CryptoConfig.swift  CryptoContext.swift  CryptoContextProtocol.swift  Errors.swift  PeacemakrKey.swift  Plaintext.swift  RandomDevice.swift  corecrypto.modulemap  module.modulemap
src/ffi/swift/CoreCrypto/CoreCrypto.xcodeproj/: project.pbxproj
src/ffi/swift/CoreCrypto/CoreCrypto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/ffi/swift/CoreCrypto/CoreCrypto.xcodeproj/project.xcworkspace/xcuserdata/aman.xcuserdatad/: UserInterfaceState.xcuserstate
src/ffi/swift/CoreCrypto/CoreCrypto.xcodeproj/xcshareddata/xcschemes/: CoreCrypto.xcscheme
src/ffi/swift/CoreCrypto/CoreCrypto.xcodeproj/xcuserdata/aman.xcuserdatad/xcschemes/: xcschememanagement.plist
src/ffi/swift/CoreCrypto/CoreCryptoTests/: CoreCryptoTests.swift
src/ffi/swift/PeacemakrCoreCrypto/: Package.swift
src/ffi/swift/PeacemakrCoreCrypto/Sources/PeacemakrCoreCrypto/: PeacemakrCoreCrypto.swift
src/ffi/swift/PeacemakrCoreCrypto/Tests/: LinuxMain.swift
src/ffi/swift/PeacemakrCoreCrypto/Tests/PeacemakrCoreCryptoTests/: PeacemakrCoreCryptoTests.swift  XCTestManifests.swift
src/ffi/swift/openssl/: build-openssl.sh
src/ffi/web/: .gitignore  CMakeLists.txt  build-core-crypto.sh.in
src/ffi/web/openssl/: build-openssl.sh
src/ffi/web/src/: crypto.cpp
src/sdk-core/: CMakeLists.txt
src/test/: CMakeLists.txt  encrypt_asymmetric.c  encrypt_symmetric.c  serialize.c  test_helper.h
(+1 files in other folders)
